# OpenCV-CPP

./: .gitignore  README.md  generate-multi-project-gitignore.bat  generate-multi-project-gitignore.ps1  git.cpp  git.ps1
Toolbox/: CMakeLists.txt  CMakeSettings.json  full-rebuild-debug.bat  full-rebuild-debug.ps1  main.cpp  readme.txt  trackbars.config
Toolbox/include/: Annotator.hpp  AnnotatorCapability.hpp  Capability.hpp  CapabilityContext.hpp  ColorDetector.hpp  ColorDetectorCapability.hpp  DisplayManager.hpp  FaceDetector.hpp  FaceDetectorCapability.hpp  ImageLoader.hpp  ImageReshape.hpp  ImageReshapeCapability.hpp  MorphologicalCapability.hpp  MorphologicalProcessor.hpp  Morphology.hpp  MorphologyCapability.hpp  Orchestrator.hpp  Scanner.hpp  ScannerCapability.hpp  Tracer.hpp  TracerCapability.hpp  VideoColorDetector.hpp  VideoColorDetectorCapability.hpp  VideoColorTracker.hpp  VideoColorTrackerCapability.hpp  WarpPerspective.hpp  WarpPerspectiveCapability.hpp
Toolbox/src/: Annotator.cpp  ColorDetector.cpp  DisplayManager.cpp  FaceDetector.cpp  ImageLoader.cpp  ImageReshape.cpp  MorphologicalCapability.cpp  MorphologicalProcessor.cpp  Morphology.cpp  Orchestrator.cpp  Scanner.cpp  Tracer.cpp  VideoColorDetector.cpp  VideoColorTracker.cpp  WarpPerspective.cpp
